Fixed font readability in forms for xs devices

--- a/app/assets/stylesheets/my-styles.css
+++ b/app/assets/stylesheets/my-styles.css
@@ -417,7 +417,7 @@ footer {
 /*********************** Books **************************/
 .page-title {
   font-weight: 100;
-  font-size: 3em;
+  font-size: 3.5em;
   color: #1abc9c;
 }
 
@@ -515,7 +515,7 @@ ul, li{
   width: 100%;
   height: 40px;
   font-size: 1.25em;
-  font-weight: 100;
+  font-weight: 300;
   text-align: center;
 }
 
@@ -583,6 +583,7 @@ ul, li{
 
   .book-info {
     width: 40%;
+    font-weight: 100;
   }
 
   .page-title {
